Hide the toolbar on scroll
Have to implement onw CollapsingToolbarLayout, the one from the design
library doesn't want to draw the content scrim unless it fits the system
window.

--- a/gearshift/src/main/res/layout/main_navigation_app_bar.xml
+++ b/gearshift/src/main/res/layout/main_navigation_app_bar.xml
@@ -1,38 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:bind="http://schemas.android.com/apk/res-auto">
-    <data>
-        <variable
-            name="viewModel"
-            type="org.sugr.gearshift.viewmodel.MainNavigationViewModel"/>
-    </data>
-    <android.support.design.widget.CoordinatorLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/viewContainer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
-        tools:context=".ui.MainNavigationActivity">
+	<data>
+		<variable
+			name="viewModel"
+			type="org.sugr.gearshift.viewmodel.MainNavigationViewModel"/>
+	</data>
+	<android.support.design.widget.CoordinatorLayout
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:app="http://schemas.android.com/apk/res-auto"
+		xmlns:tools="http://schemas.android.com/tools"
+		android:id="@+id/viewContainer"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:fitsSystemWindows="true"
+		tools:context=".ui.MainNavigationActivity">
 
-        <!--
-         Add '@string/container_chrome' to any view that is always part of the layout
-         The content is always the second child
-         -->
-        <android.support.design.widget.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay">
+		<!--
+		 Add '@string/container_chrome' to any view that is always part of the layout
+		 The content is always the second child
+		 -->
+		<android.support.design.widget.AppBarLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:theme="@style/AppTheme.AppBarOverlay">
 
-            <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay">
+			<org.sugr.gearshift.ui.view.CollapsingToolbarLayout
+				android:id="@+id/toolbarLayout"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				app:titleEnabled="false"
+				app:contentScrim="?attr/colorPrimaryDark"
+				app:layout_scrollFlags="scroll|enterAlways">
 
-            </android.support.v7.widget.Toolbar>
+				<android.support.v7.widget.Toolbar
+					android:id="@+id/toolbar"
+					android:layout_width="match_parent"
+					android:layout_height="?attr/actionBarSize"
+					android:background="?attr/colorPrimary"
+					app:popupTheme="@style/AppTheme.PopupOverlay"
+					app:layout_scrollFlags="scroll|enterAlways">
 
-        </android.support.design.widget.AppBarLayout>
+				</android.support.v7.widget.Toolbar>
 
-    </android.support.design.widget.CoordinatorLayout>
+			</org.sugr.gearshift.ui.view.CollapsingToolbarLayout>
+
+		</android.support.design.widget.AppBarLayout>
+
+	</android.support.design.widget.CoordinatorLayout>
 </layout>
