--- a/gearshift/src/main/res/layout/torrent_list_content.xml
+++ b/gearshift/src/main/res/layout/torrent_list_content.xml
@@ -19,6 +19,7 @@
         <android.support.v4.widget.SwipeRefreshLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             bind:onRefreshListener="@{viewModel.refreshListener}"
 	        bind:refreshing="@{viewModel.refreshing}">
 
