Some fixes to the profile editor

--- a/gearshift/src/main/res/layout/profile_editor.xml
+++ b/gearshift/src/main/res/layout/profile_editor.xml
@@ -154,6 +154,7 @@
 			<android.support.design.widget.TextInputEditText
 				style="@style/Form.TextInput"
 				android:text="@={viewModel.password}"
+				android:inputType="textPassword"
 				android:hint="@string/con_password"/>
 
 		</android.support.design.widget.TextInputLayout>
