--- a/gearshift/src/main/res/menu/first_time_profile_editor.xml
+++ b/gearshift/src/main/res/menu/first_time_profile_editor.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/test"
-        android:title="@string/action_test"
+        android:id="@+id/save"
+        android:title="@string/action_save"
         android:orderInCategory="100"
         app:showAsAction="ifRoom"/>
 </menu>
